feat: added library
added page about book

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,7 @@
                         <li><a href="/board">Доска</a></li>
                         <li><a href="/debut-base">База дебютов</a></li>
                         <li><a href="/forum">Форум</a></li>
+                        <li><a href="/library">Библиотека</a></li>
                     </ul>
                     <ul class="right">
                         <li><a href="/auth/login" id="UserAccount">Войти</a></li>
