added url to begginer-lesson

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,7 @@
                     <ul class="left">
                         <li><a href="/board">Доска</a></li>
                         <li><a href="/debut-base">База дебютов</a></li>
+                        <li><a href="/beginner-lessons">Для начинающих</a></li>
                         <li><a href="/forum">Форум</a></li>
                         <li><a href="/library">Библиотека</a></li>
                     </ul>
