refactor: refactor code

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,7 +23,7 @@
 				<nav>
 					<ul class="left">
 						<li><a href="/board">Доска</a></li>
-						<li><a href="/debuts">База дебютов</a></li>
+						<li><a href="/debuts">Дебюты</a></li>
 						<li><a href="/beginner-lessons">Для начинающих</a></li>
 						<li><a href="/forum">Форум</a></li>
 						<li><a href="/library">Библиотека</a></li>
