--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
 		<header>
 			<div class="container">
 				<div class="logo">
-					<img src="/logo.png" alt="Logo" />
+					<img src="/media/logo.png" alt="Logo" />
 				</div>
 				<nav>
 					<ul class="left">
