feat: created new media dir, renamed urls, move files

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="icon" type="image/jpg" href="/static/media/favicon.jpg">
 		<title>React App</title>
 	</head>
 
@@ -21,7 +22,7 @@
 		<header>
 			<div class="container">
 				<div class="logo">
-					<img src="/media/logo.png" alt="Logo" />
+					<img src="/static/media/logo.png" alt="Logo" />
 				</div>
 				<nav>
 					<ul class="left">
