--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,32 +12,42 @@
 	</head>
 
 	<body>
-		<div class="preloader-wrapper">
-			<div class="spinner"></div>
-		</div>
-		<header>
-			<div class="container">
-				<div class="logo">
-					<img src="/static/media/logo.png" alt="Logo" />
-				</div>
-				<nav>
-					<ul class="left">
-						<li><a href="/board">Доска</a></li>
-						<li><a href="/debuts">Дебюты</a></li>
-						<li><a href="/beginner-lessons">Для начинающих</a></li>
-						<li><a href="/forum">Форум</a></li>
-						<li><a href="/library">Библиотека</a></li>
-					</ul>
-					<ul class="right">
-						<li><a href="/auth/login" id="UserAccount">Войти</a></li>
-					</ul>
-				</nav>
+		<div class="wrapper">
+			<div class="preloader-wrapper">
+				<div class="spinner"></div>
 			</div>
-		</header>
 
-		<main id="root">
-			<noscript>You need to enable JavaScript to run this app.</noscript>
-		</main>
+			<header>
+				<div class="container">
+					<div class="logo-and-button">
+						<button class="open-close-bar" onClick="openCloseBar()">
+							<img src="/static/media/menu.svg" alt="">
+						</button>
+						<div class="logo">
+							<img src="/static/media/logo.png" alt="Logo" />
+						</div>
+					</div>
+					<nav id="nav-bar">
+						<ul >
+							<li><a href="/board">Доска</a></li>
+							<li><a href="/debuts">Дебюты</a></li>
+							<li><a href="/beginner-lessons">Для начинающих</a></li>
+							<li><a href="/forum">Форум</a></li>
+							<li><a href="/library">Библиотека</a></li>
+						</ul>
+						<button class="close-bar" onClick="closeBar()">
+							<img src="/static/media/close-white.svg" alt="">
+						</button>
+
+					</nav>
+					<a href="/auth/login" class="sign-in-out" id="UserAccount">Войти</a>
+				</div>
+			</header>
+
+			<main id="root">
+				<noscript>You need to enable JavaScript to run this app.</noscript>
+			</main>
+		</div>
 	</body>
 </html>
 <script>
@@ -52,6 +62,8 @@
 	});
 </script>
 <script>
+	let barIsOpenned = false;
+
 	// check login
 	fetch('/api/auth/islogin')
 		.then((response) => {
@@ -69,4 +81,16 @@
 		.catch((error) => {
 			console.log(error);
 		});
+
+
+	function openCloseBar () {
+		document.querySelector("#nav-bar").style = "transform: translateX(0)"
+		barIsOpenned = !barIsOpenned;
+	};
+
+	function closeBar () {
+		document.querySelector("#nav-bar").style = "transform: translateX(-100%)"
+		barIsOpenned = !barIsOpenned;
+	}
+
 </script>
